# vision

./: .gitignore  Makefile
sejm-analyzer/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run.py  sync_data.py
sejm-analyzer/app/: __init__.py  container.py
sejm-analyzer/app/models/: __init__.py
sejm-analyzer/app/models/common/: __init__.py  base.py  cache.py
sejm-analyzer/app/models/core/: __init__.py  club.py  mp.py  sitting.py  term.py
sejm-analyzer/app/models/legislation/: __init__.py  entities.py  print.py  process.py  stage.py
sejm-analyzer/app/models/voting/: __init__.py  entities.py  vote.py  voting.py
sejm-analyzer/app/repositories/: __init__.py  base.py  db.py
sejm-analyzer/app/repositories/common/: __init__.py  cache.py
sejm-analyzer/app/repositories/core/: __init__.py  mp.py
sejm-analyzer/app/repositories/legislation/: __init__.py  process.py
sejm-analyzer/app/repositories/voting/: __init__.py  voting.py
sejm-analyzer/app/services/: __init__.py
sejm-analyzer/app/services/dashboard/: __init__.py  service.py
sejm-analyzer/app/services/legislation/: __init__.py  analytics.py  topic_modeling.py
sejm-analyzer/app/services/voting/: __init__.py  analytics.py
sejm-analyzer/etl/: __init__.py  core.py  helpers.py  legislation.py  sync.py  validation.py  voting.py
sejm-analyzer/helpers/: __init__.py  formulas.py
sejm-analyzer/sejm_client/: __init__.py  base.py
sejm-analyzer/sejm_client/core/: __init__.py  client.py  schemas.py
sejm-analyzer/sejm_client/legislation/: __init__.py  client.py  schemas.py
sejm-analyzer/sejm_client/voting/: __init__.py  client.py  schemas.py
sejm-analyzer/settings/: __init__.py  logging.py
sejm-analyzer/src/: __init__.py  analytics.py  api_client.py  app.py  collector.py  db.py  formulas.py  logging_config.py  ml_analytics.py  repository.py  settings.py
sejm-analyzer/src/models/: __init__.py  api.py  tables.py
sejm-analyzer/tests/: __init__.py
sejm-analyzer/tests/unit/: test_formulas.py
sejm-analyzer/web/: __init__.py
sejm-analyzer/web/api/: __init__.py  errors.py
sejm-analyzer/web/api/dashboard/: __init__.py  schemas.py  views.py
sejm-analyzer/web/api/legislation/: __init__.py  schemas.py  views.py
sejm-analyzer/web/api/voting/: __init__.py  schemas.py  views.py
sejm-analyzer/web/streamlit/: __init__.py  app.py
