[project]
name = "sejm-analyzer"
version = "0.1.0"
description = "Polish Parliament (Sejm) voting analysis dashboard"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "duckdb>=0.9.0",
    "httpx>=0.25.0",
    "polars>=0.19.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
