[project]
name = "sejm-analyzer"
version = "0.1.0"
description = "Polish Parliament (Sejm) voting analysis dashboard"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "duckdb>=0.9.0",
    "httpx>=0.25.0",
    "polars>=0.19.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[tool.setuptools]
packages = ["app", "etl", "helpers", "sejm_client", "settings", "web"]

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# ========== RUFF ==========
[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (needed for sys.path manipulation)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
    "ARG001", # unused function argument (often needed for API compatibility)
    "W291",   # trailing whitespace (inside strings - can't autofix)
    "W293",   # blank line contains whitespace (inside strings)
    "C408",   # unnecessary dict() call (plotly uses this style)
    "UP007",  # Optional[X] vs X | None (pydantic models readability)
    "UP038",  # isinstance tuple vs X | Y
]

[tool.ruff.lint.isort]
known-first-party = ["app", "etl", "helpers", "sejm_client", "settings", "web"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ========== PYTEST ==========
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
